--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,8 +1,8 @@
-::-moz-range-track {
-  background: #d7dcdf;
+
+input[type=range]::-moz-range-track {
+  background: transparent;
   border: 0;
 }
-
 input::-moz-focus-inner,
 input::-moz-focus-outer {
   border: 0;
